--- a/src/styles/Nft.scss
+++ b/src/styles/Nft.scss
@@ -27,7 +27,13 @@
         display: flex;
         align-items: center;
         gap: 16px;
-        justify-content: end;
+        justify-content: space-between;
+        width: 100%;
+        .nft__exchange--btns__right{
+            display: flex;
+            align-items: center;
+            gap: 16px;
+        }
     }
     .nft__exchange--button{
         display: flex;
@@ -67,6 +73,12 @@
             background: #00ffb3;
             &::before{
                 border: 1px solid #00ffb3;
+            }
+        }
+        &.my{
+            background: #4EE1FB;
+            &::before{
+                border: 1px solid #4EE1FB;
             }
         }
     }//.nft__exchange--button--END--
