--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -46,7 +46,7 @@
         flex-direction: column;
         gap: 10px;
         height: 100%;
-        // max-height: 376px;
+        max-height: 740px;
         overflow-y: scroll;
         width: calc(100% + 14px);
     }
