--- a/src/components/mypage/albums/AlbumsCreateModal.scss
+++ b/src/components/mypage/albums/AlbumsCreateModal.scss
@@ -1,218 +1,190 @@
 .albums-create-modal {
-    padding: 20px;
-    color: #fff;
+  padding: 20px;
+  color: #fff;
 
-    &__title {
-        color: var(--Text-music-title, #f1f1f1);
-        font-family: Orbitron400;
-        font-size: 14px;
-        font-style: normal;
-        line-height: normal;
-        letter-spacing: 0.42px;
-        margin-bottom: 12px;
+  &__title {
+    color: var(--Text-music-title, #f1f1f1);
+    font-family: Orbitron400;
+    font-size: 14px;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    margin-bottom: 12px;
+  }
+
+  &__size-info {
+    color: var(--Text-music-sub, #aaa);
+    font-family: Inter300;
+    font-size: 8px;
+    font-style: normal;
+    line-height: 100%; /* 8px */
+    margin: 12px 0 8px 0;
+  }
+
+  &__image-box {
+    margin-top: 8px;
+    margin-bottom: 24px;
+    width: 192px;
+    height: 192px;
+    background-color: #1b1b1b;
+    border-radius: 25px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    button {
+      position: absolute;
+      right: 10px;
+      bottom: 10px;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      cursor: pointer;
     }
+  }
 
-    &__size-info {
-        color: var(--Text-music-sub, #aaa);
-        font-family: Inter300;
-        font-size: 8px;
-        font-style: normal;
-        line-height: 100%; /* 8px */
-        margin: 12px 0 8px 0;
-    }
+  &__image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+  }
 
-    &__image-box {
-        margin-top: 8px;
-        margin-bottom: 24px;
-        width: 192px;
-        height: 192px;
-        background-color: #1b1b1b;
-        border-radius: 25px;
-        position: relative;
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+  &__button-image {
+    width: 32px;
+    height: 32px;
+  }
 
-        button {
-            position: absolute;
-            right: 10px;
-            bottom: 10px;
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border: none;
-            cursor: pointer;
-        }
-    }
+  &__name {
+    color: var(--Text-music-title, #f1f1f1);
+    font-family: Orbitron400;
+    font-size: 14px;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    margin-bottom: 12px;
+  }
 
-    &__image {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: cover;
-    }
+  &__error-message {
+    text-align: center;
+    color: #ff5c63;
+    font-family: Inter600;
+    font-size: 12px;
+    font-style: normal;
+    line-height: normal;
+    margin-bottom: 12px;
+  }
 
-    &__button-image {
-        width: 32px;
-        height: 32px;
-    }
+  &__name-box {
+    position: relative;
+    margin-top: 12px;
+    margin-bottom: 24px;
 
-    &__name {
-        color: var(--Text-music-title, #f1f1f1);
-        font-family: Orbitron400;
-        font-size: 14px;
-        font-style: normal;
-        line-height: normal;
-        letter-spacing: 0.42px;
-        margin-bottom: 12px;
-    }
+    &__input {
+      display: flex;
+      padding: 12px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 10px;
+      align-self: stretch;
+      border-radius: 12px;
+      border: 1px solid var(--Color-04, #383838);
+      background: var(--Dark-Color-01, #0b0b0c);
+      color: var(--Text-music-un, #565656);
+      font-family: 'Noto Sans KR';
+      font-size: 10px;
+      font-style: normal;
+      font-weight: 350;
+      line-height: normal;
+      &:focus {
+        outline: none;
+        border-color: rgba(255, 255, 255, 0.3);
+      }
 
-    &__error-message {
-        text-align: center;
-        color: #ff5c63;
-        font-family: Inter600;
+      &::placeholder {
+        color: rgba(255, 255, 255, 0.5);
+      }
+
+      &__length {
+        position: absolute;
+        right: 15px;
+        top: 50%;
+        transform: translateY(-50%);
+        color: var(--Text-music-un, #565656);
+        font-family: Inter400;
         font-size: 12px;
         font-style: normal;
         line-height: normal;
-        margin-bottom: 12px;
+      }
+    }
+  }
+
+  &__button-box {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 12px;
+
+    button {
+      // flex: 1;
+      height: 46px;
+      border-radius: 12px;
+      font-size: 16px;
+      font-weight: 500;
+      cursor: pointer;
+    }
+  }
+
+  &__button {
+    width: 100%;
+    height: 40px;
+    // background: linear-gradient(90deg, #a4ef00 0%, #a4ef00 100%);
+    border: none;
+    color: #000;
+    position: relative;
+    top: 0px;
+    transition: 0.2s all;
+    border-radius: 12px;
+
+    &::after {
+      content: '';
+      position: absolute;
+      border-radius: 12px;
+      top: 5px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      box-sizing: border-box;
+      border: 1px solid;
+      transition: 0.2s all;
     }
 
-    &__name-box {
-        position: relative;
-        margin-top: 12px;
-        margin-bottom: 24px;
-
-        &__input {
-            display: flex;
-            padding: 12px;
-            flex-direction: column;
-            align-items: flex-start;
-            gap: 10px;
-            align-self: stretch;
-            border-radius: 12px;
-            border: 1px solid var(--Color-04, #383838);
-            background: var(--Dark-Color-01, #0b0b0c);
-            color: var(--Text-music-un, #565656);
-            font-family: 'Noto Sans KR';
-            font-size: 10px;
-            font-style: normal;
-            font-weight: 350;
-            line-height: normal;
-            &:focus {
-                outline: none;
-                border-color: rgba(255, 255, 255, 0.3);
-            }
-
-            &::placeholder {
-                color: rgba(255, 255, 255, 0.5);
-            }
-
-            &__length {
-                position: absolute;
-                right: 15px;
-                top: 50%;
-                transform: translateY(-50%);
-                color: var(--Text-music-un, #565656);
-                font-family: Inter400;
-                font-size: 12px;
-                font-style: normal;
-                line-height: normal;
-            }
-        }
+    &:hover {
+      top: 5px;
+      &::after {
+        top: 0px;
+      }
     }
 
-    &__button-box {
-        display: flex;
-        justify-content: space-between;
-        gap: 10px;
-
-        button {
-            // flex: 1;
-            height: 46px;
-            border-radius: 12px;
-            font-size: 16px;
-            font-weight: 500;
-            cursor: pointer;
-        }
+    &.cancel-button,
+    &.delete-button {
+      background-color: #383838;
+      color: #f1f1f1;
+      &::after {
+        border-color: #383838;
+      }
     }
-
-    &__button {
-        &__cancel {
-            width: 84px;
-            height: 40px;
-            // background-color: rgba(255, 255, 255, 0.1);
-            background-color: #383838;
-            // border: 1px solid rgba(255, 255, 255, 0.2);
-            color: #fff;
-            display: flex;
-            padding: 8px 10px;
-            justify-content: center;
-            align-items: center;
-            gap: 8px;
-            color: var(--Text-music-title, #f1f1f1);
-            font-family: Orbitron600;
-            font-size: 16px;
-            font-style: normal;
-            line-height: normal;
-            letter-spacing: 0.48px;
-            position: relative;
-            top: 0px;
-            transition: 0.2s all;
-
-            &::after {
-                content: '';
-                position: absolute;
-                border-radius: 12px;
-                top: 5px;
-                width: 100%;
-                height: 100%;
-                box-sizing: border-box;
-                border: 1px solid #383838;
-                transition: 0.2s all;
-            }
-
-            &:hover {
-                // background-color: rgba(255, 255, 255, 0.2);
-                top: 5px;
-                &::after {
-                    top: 0px;
-                }
-            }
-        }
-
-        &__create {
-            width: 100%;
-            height: 40px;
-            // background: linear-gradient(90deg, #a4ef00 0%, #a4ef00 100%);
-            background-color: #cf0;
-            border: none;
-            color: #000;
-            position: relative;
-            top: 0px;
-            transition: 0.2s all;
-
-            &::after {
-                content: '';
-                border-radius: 12px;
-                position: absolute;
-                border: 1px solid #cf0;
-                top: 5px;
-                width: 100%;
-                box-sizing: border-box;
-                height: 100%;
-                left: 0;
-                transition: 0.2s all;
-            }
-
-            &:hover {
-                top: 5px;
-                &::after {
-                    top: 0px;
-                }
-            }
-        }
+    &.create-button {
+      width: 800px;
+      background-color: #cf0;
+      &::after {
+        border-color: #cf0;
+      }
     }
+  }
 }
