--- a/src/components/nft/MintNftDetail.scss
+++ b/src/components/nft/MintNftDetail.scss
@@ -53,7 +53,21 @@
         top: 0;
       }
     }
-  } //mint-btn--END--
+  }
+  .disabled {
+    background: #383838;
+    border: 1px solid #383838;
+    &::before {
+      border: 1px solid #383838;
+    }
+    &:hover {
+      top: 0;
+      &::before {
+        top: 4px;
+      }
+    }
+  }
+  //mint-btn--END--
 
   .sell-btn {
     display: flex;
