--- a/src/components/nft/NftOverview.scss
+++ b/src/components/nft/NftOverview.scss
@@ -1,78 +1,85 @@
-.nft-overview{
-    .nft-overview__title{
-        color: #FFF;
+.nft-overview {
+  .nft-overview__title {
+    color: #fff;
+    font-family: Orbitron400;
+    font-size: 16px;
+    font-style: normal;
+    line-height: normal;
+    margin-bottom: 16px;
+  }
+  .nft-overview__content {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 16px;
+    .nft-overview__content--item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 8px;
+      border-radius: 12px;
+      border: 1px solid #00ffb3;
+      height: 76px;
+      grid-column: span 2;
+
+      &.isTwo {
+        grid-column: span 3;
+      }
+
+      dt {
+        color: #00ffb3;
+        text-align: center;
         font-family: Orbitron400;
         font-size: 16px;
         font-style: normal;
+        line-height: 100%;
+      }
+      dd {
+        color: var(--Text-music-title, #f1f1f1);
+        text-align: center;
+        font-family: Inter700;
+        font-size: 16px;
+        font-style: normal;
         line-height: normal;
-        margin-bottom: 16px;
-    }
-    .nft-overview__content{
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        gap: 16px;
-        .nft-overview__content--item{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            gap: 8px;
-            border-radius: 12px;
-            border: 1px solid #00FFB3;
-            height: 76px;
-            grid-column: span 2;
-
-            &.isTwo {
-                grid-column: span 3;
-            }
-
-            dt{
-                color: #00FFB3;
-                text-align: center;
-                font-family: Orbitron400;
-                font-size: 16px;
-                font-style: normal;
-                line-height: 100%;
-            }
-            dd{
-                color: var(--Text-music-title, #F1F1F1);
-                text-align: center;
-                font-family: Inter700;
-                font-size: 16px;
-                font-style: normal;
-                line-height: normal;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 8px;
-            }
-            &.long {
-                grid-column: 1 / -1;
-            }
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        .sub_value {
+          color: var(--Text-music-sub, #aaa);
+          text-align: center;
+          font-family: Inter;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 300;
+          line-height: 100%; /* 12px */
+          letter-spacing: 0.36px;
         }
+      }
+      &.long {
+        grid-column: 1 / -1;
+      }
     }
-}//"nft-overview--END--
+  }
+} //"nft-overview--END--
 
-
-.nft-overview__content--item-wrap{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}//nft-overview__content--item-wrap--END--
-
-
+.nft-overview__content--item-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} //nft-overview__content--item-wrap--END--
 
 @media screen and (max-width: 768px) {
-    .nft-overview{
-        .nft-overview__content {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-            .nft-overview__content--item{
-                &.long{
-                    grid-column: none;
-                }
-            }
+  .nft-overview {
+    .nft-overview__content {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      .nft-overview__content--item {
+        &.long {
+          grid-column: none;
         }
+      }
     }
+  }
 }
