--- a/src/components/mypage/AiServices.scss
+++ b/src/components/mypage/AiServices.scss
@@ -1,283 +1,288 @@
 .ai__services {
-    margin-top: 50px;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  .ai__service-btn {
+    color: var(--Text-music-title, #f1f1f1);
+    font-family: Orbitron600;
+    font-size: 16px;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.48px;
+    border-radius: 12px;
+    background: var(--Color-04, #383838);
+    height: 52px;
+    padding: 8px 10px;
+    white-space: nowrap;
+    position: relative;
+    transition: 0.2s all;
     display: flex;
-    justify-content: center;
+    gap: 8px;
     align-items: center;
-    gap: 40px;
-    .ai__service-btn {
-        color: var(--Text-music-title, #f1f1f1);
-        font-family: Orbitron600;
-        font-size: 16px;
-        font-style: normal;
-        line-height: normal;
-        letter-spacing: 0.48px;
-        border-radius: 12px;
-        background: var(--Color-04, #383838);
-        height: 52px;
-        padding: 8px 10px;
-        white-space: nowrap;
-        position: relative;
-        transition: 0.2s all;
-        display: flex;
-        gap: 8px;
-        align-items: center;
-        justify-content: center;
+    justify-content: center;
 
-        &:hover {
-            transform: translateY(5px);
-            &:after {
-                transform: translateY(0px);
-            }
-        }
-        &:after {
-            transition: 0.2s all;
-            content: '';
-            position: absolute;
-            box-sizing: border-box;
-            height: 100%;
-            width: 100%;
-            // background-color: red;
-            left: 0px;
-            top: 0;
-            border-radius: 12px;
-            border: 1px solid #383838;
-            transform: translateY(5px);
-        }
+    &:hover {
+      transform: translateY(5px);
+      &:after {
+        transform: translateY(0px);
+      }
     }
-    .ai__service-btn--image {
-        padding: 4px;
-        background-color: #222;
-        border-radius: 20px;
-        img {
-            width: 10px;
-            height: 10px;
-        }
+    &:after {
+      transition: 0.2s all;
+      content: '';
+      position: absolute;
+      box-sizing: border-box;
+      height: 100%;
+      width: 100%;
+      // background-color: red;
+      left: 0px;
+      top: 0;
+      border-radius: 12px;
+      border: 1px solid #383838;
+      transform: translateY(5px);
     }
+  }
+  .ai__service-btn--image {
+    padding: 4px;
+    background-color: #222;
+    border-radius: 20px;
+    img {
+      width: 10px;
+      height: 10px;
+    }
+  }
 
-    .active {
-        color: var(--Text-dark-title, #1a1a1a);
-        background: var(--primary-100, #cf0);
-        &:after {
-            border-color: #cf0;
-        }
+  .active {
+    color: var(--Text-dark-title, #1a1a1a);
+    background: var(--primary-100, #cf0);
+    &:after {
+      border-color: #cf0;
     }
+  }
 }
 .ai__chart {
-    width: 100%;
-    margin-top: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .ai__ai-status {
+  margin-top: 24px;
+  .ai-status__title {
+    margin-bottom: 24px;
+    color: var(--primary-base, #cf0);
+    font-family: Orbitron400;
+    font-size: 24px;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.72px;
+    position: relative;
+    &::after {
+      position: absolute;
+      content: '';
+      width: 4px;
+      height: 4px;
+      top: -2px;
+      left: -4px;
+      background-color: #cf0;
+      border-radius: 100%;
+    }
+  }
+  .ai-status__menu {
+    width: 566px;
+    display: flex;
+    padding: 6px;
+    align-items: flex-start;
+    gap: 12px;
+    border-radius: 12px;
+    border: 1px solid var(--Color-03, #222);
+    margin-bottom: 24px;
+    .ai-status__menu-item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      align-items: center;
+      color: var(--Text-music-un, #565656);
+      font-family: Orbitron500;
+      font-size: 14px;
+      font-style: normal;
+      line-height: 100%; /* 14px */
+      letter-spacing: 0.42px;
+      padding: 8px 12px;
+      white-space: nowrap;
+    }
+    .active {
+      padding: 8px 12px;
+      gap: 8px;
+      border-radius: 12px;
+      background: var(--secondary-base, #00ffb3);
+    }
+  }
+  .ai-status__info {
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
     margin-top: 24px;
-    .ai-status__title {
-        margin-bottom: 24px;
-        color: var(--primary-base, #cf0);
-        font-family: Orbitron400;
-        font-size: 24px;
-        font-style: normal;
-        line-height: normal;
-        letter-spacing: 0.72px;
-        position: relative;
-        &::after {
-            position: absolute;
-            content: '';
-            width: 4px;
-            height: 4px;
-            top: -2px;
-            left: -4px;
-            background-color: #cf0;
-            border-radius: 100%;
-        }
+    .ai-status__chart {
+      width: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        object-fit: cover;
+        width: 100%;
+      }
     }
-    .ai-status__menu {
-        width: 566px;
+  }
+  .ai-status__detail {
+    width: 50%;
+    .ai-status__detail-title {
+      color: var(--primary-base, #cf0);
+      font-family: Orbitron400;
+      font-size: 18px;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: 0.54px;
+      margin-bottom: 14px;
+    }
+    .ai-status__detail-box {
+      .ai-status__detail-item {
         display: flex;
-        padding: 6px;
-        align-items: flex-start;
-        gap: 12px;
-        border-radius: 12px;
-        border: 1px solid var(--Color-03, #222);
-        margin-bottom: 24px;
-        .ai-status__menu-item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            align-items: center;
-            color: var(--Text-music-un, #565656);
-            font-family: Orbitron500;
-            font-size: 14px;
-            font-style: normal;
-            line-height: 100%; /* 14px */
-            letter-spacing: 0.42px;
-            padding: 8px 12px;
-            white-space: nowrap;
+        margin-bottom: 12px;
+        .detail-item__title {
+          box-sizing: border-box;
+          color: var(--Text-music-title, #f1f1f1);
+          width: 100%;
+          max-width: 140px;
+          font-family: Inter500;
+          font-size: 14px;
+          display: flex;
+          padding: 8px 12px;
+          justify-content: center;
+          align-items: center;
+          align-self: stretch;
+          border-radius: 6px 0px 0px 6px;
+          border-top: 1px solid var(--Color-03, #222);
+          border-bottom: 1px solid var(--Color-03, #222);
+          border-left: 1px solid var(--Color-03, #222);
+          border-right: 12px solid #1a1a1a;
+          background: var(--Color-03, #222);
         }
-        .active {
-            padding: 8px 12px;
-            gap: 8px;
-            border-radius: 12px;
-            background: var(--secondary-base, #00ffb3);
+        .detail-item__value {
+          width: 100%;
+          display: flex;
+          padding: 8px 12px;
+          align-items: center;
+          border-radius: 0px 6px 6px 0px;
+          border-top: 1px solid var(--Color-03, #222);
+          border-right: 1px solid var(--Color-03, #222);
+          border-bottom: 1px solid var(--Color-03, #222);
+          border-left: 1px solid #222;
+          color: var(--Text-music-sub, #aaa);
+          font-family: Inter400;
+          font-size: 14px;
+          line-height: 100%; /* 14px */
         }
+      }
     }
-    .ai-status__info {
-        display: flex;
-        justify-content: space-between;
-        gap: 16px;
-        margin-top: 24px;
-        .ai-status__chart {
-            width: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            img {
-                object-fit: cover;
-                width: 100%;
-            }
-        }
-    }
-    .ai-status__detail {
-        width: 50%;
-        .ai-status__detail-title {
-            color: var(--primary-base, #cf0);
-            font-family: Orbitron400;
-            font-size: 18px;
-            font-style: normal;
-            line-height: normal;
-            letter-spacing: 0.54px;
-            margin-bottom: 14px;
-        }
-        .ai-status__detail-box {
-            .ai-status__detail-item {
-                display: flex;
-                margin-bottom: 12px;
-                .detail-item__title {
-                    box-sizing: border-box;
-                    color: var(--Text-music-title, #f1f1f1);
-                    width: 100%;
-                    max-width: 140px;
-                    font-family: Inter500;
-                    font-size: 14px;
-                    display: flex;
-                    padding: 8px 12px;
-                    justify-content: center;
-                    align-items: center;
-                    align-self: stretch;
-                    border-radius: 6px 0px 0px 6px;
-                    border-top: 1px solid var(--Color-03, #222);
-                    border-bottom: 1px solid var(--Color-03, #222);
-                    border-left: 1px solid var(--Color-03, #222);
-                    border-right: 12px solid #1a1a1a;
-                    background: var(--Color-03, #222);
-                }
-                .detail-item__value {
-                    width: 100%;
-                    display: flex;
-                    padding: 8px 12px;
-                    align-items: center;
-                    border-radius: 0px 6px 6px 0px;
-                    border-top: 1px solid var(--Color-03, #222);
-                    border-right: 1px solid var(--Color-03, #222);
-                    border-bottom: 1px solid var(--Color-03, #222);
-                    border-left: 1px solid #222;
-                    color: var(--Text-music-sub, #aaa);
-                    font-family: Inter400;
-                    font-size: 14px;
-                    line-height: 100%; /* 14px */
-                }
-            }
-        }
-    }
+  }
 }
 .ai__period {
-    margin-bottom: 20px;
-    .period__title {
-        color: var(--primary-base, #cf0);
-        font-family: Orbitron400;
-        font-size: 24px;
-        font-style: normal;
-        line-height: normal;
-        letter-spacing: 0.72px;
-        margin-bottom: 24px;
-        position: relative;
-        margin-top: 16px;
+  margin-bottom: 20px;
+  .period__title {
+    color: var(--primary-base, #cf0);
+    font-family: Orbitron400;
+    font-size: 24px;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.72px;
+    margin-bottom: 24px;
+    position: relative;
+    margin-top: 16px;
 
-        &::after {
-            position: absolute;
-            content: '';
-            width: 4px;
-            height: 4px;
-            top: -2px;
-            left: -4px;
-            background-color: #cf0;
-            border-radius: 100%;
-        }
+    &::after {
+      position: absolute;
+      content: '';
+      width: 4px;
+      height: 4px;
+      top: -2px;
+      left: -4px;
+      background-color: #cf0;
+      border-radius: 100%;
     }
-    .period__menu {
-        display: flex;
-        margin-bottom: 16px;
-        .period__menu-item {
-            display: flex;
-            padding: 8px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 10px 2px 10px 10px;
-            border: 1px solid var(--primary-200, #a9d400);
-            color: var(--primary-base, #cf0);
-            font-family: Inter400;
-            font-size: 14px;
-            font-style: normal;
-            line-height: 100%; /* 14px */
-            margin-right: 12px;
-        }
+  }
+  .period__menu {
+    display: flex;
+    margin-bottom: 16px;
+    .period__menu-item {
+      display: flex;
+      padding: 8px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px 2px 10px 10px;
+      border: 1px solid var(--primary-200, #a9d400);
+      color: var(--primary-base, #cf0);
+      font-family: Inter400;
+      font-size: 14px;
+      font-style: normal;
+      line-height: 100%; /* 14px */
+      margin-right: 12px;
     }
+  }
+  .period__chart {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .period__chart--item {
+    width: 50%;
+  }
 }
 @media screen and (max-width: 768px) {
-    .ai__services {
-        flex-direction: column;
-        gap: 16px;
-        margin-top: 0px;
-        .ai__service-btn {
-            width: 100%;
-        }
+  .ai__services {
+    flex-direction: column;
+    gap: 16px;
+    margin-top: 0px;
+    .ai__service-btn {
+      width: 100%;
     }
-    .ai__chart {
+  }
+  .ai__chart {
+    width: 100%;
+  }
+  .ai__ai-status {
+    .ai-status__menu {
+      width: 100%;
+      overflow: auto;
+    }
+    .ai-status__info {
+      display: flex;
+      flex-direction: column;
+      .ai-status__chart {
         width: 100%;
+      }
     }
-    .ai__ai-status {
-        .ai-status__menu {
-            width: 100%;
-            overflow: auto;
+    .ai-status__detail {
+      width: 100%;
+      .ai-status__detail-box {
+        .ai-status__detail-item {
+          .detail-item__title {
+            font-size: 12px;
+            max-width: 100px;
+            text-align: center;
+          }
+          .detail-item__value {
+            font-size: 12px;
+          }
         }
-        .ai-status__info {
-            display: flex;
-            flex-direction: column;
-            .ai-status__chart {
-                width: 100%;
-            }
-        }
-        .ai-status__detail {
-            width: 100%;
-            .ai-status__detail-box {
-                .ai-status__detail-item {
-                    .detail-item__title {
-                        font-size: 12px;
-                        max-width: 100px;
-                        text-align: center;
-                    }
-                    .detail-item__value {
-                        font-size: 12px;
-                    }
-                }
-            }
-        }
+      }
     }
-    .ai__period {
-        .period__chart {
-            img {
-                width: 100%;
-            }
-        }
+  }
+  .ai__period {
+    .period__chart--item {
+      width: 100%;
     }
+  }
 }
