상훈 feat : NFT MarketPlace 링크를 활성화하고, MintNftDetail 컴포넌트의 제목을 'Mint NFT'로 변경. 스타일을 개선하여 MintNftDetail의 제목에 원형 포인트 추가. NftItemDetail에서 불필요한 주석 제거 및 버튼 클릭 시 경로 이동 기능 추가.

--- a/src/components/nft/MintNftDetail.scss
+++ b/src/components/nft/MintNftDetail.scss
@@ -1,14 +1,26 @@
 .mint-detail {
   .album-detail__title {
     margin-bottom: 32px;
+    position: relative;
     dt {
-      color: #cf0;
-      font-family: Orbitron600;
-      font-size: 30px;
+      padding-left: 8px;
+      color: var(--primary-base, #cf0);
+      font-family: Orbitron400;
+      font-size: 24px;
       font-style: normal;
       line-height: normal;
-      letter-spacing: 0.9px;
+      letter-spacing: 0.72px;
     }
+    &::before {
+      content: '';
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background-color: #cf0;
+      border-radius: 100%;
+      top: 0px;
+    }
+
     dd {
       color: #f1f1f1;
       font-family: Inter400;
