--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -107,6 +107,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
               font-family: Inter400;
               font-size: 14px;
               padding: 12px;
+              // white-space: break-spaces;
             }
           }
         }
