상훈 feat : 판매 기능 추가중

--- a/src/components/nft/MintNftDetail.scss
+++ b/src/components/nft/MintNftDetail.scss
@@ -118,6 +118,22 @@
       }
     }
   }
+  .disabled {
+    border: 1px solid var(--secondary-600, #003321);
+    background: var(--black, #000);
+    color: #555555;
+    cursor: not-allowed;
+    &::before {
+      border: 1px solid #003321;
+      top: 0px;
+    }
+    &:hover {
+      top: 0px;
+      &::before {
+        top: 0px;
+      }
+    }
+  }
 
   .level-quantity-box {
     width: 100%;
