--- a/src/components/nft/BuyNftModal.scss
+++ b/src/components/nft/BuyNftModal.scss
@@ -1,3 +1,45 @@
+@mixin checkbox() {
+  /* 기본 체크박스 숨기기 */
+  appearance: none;
+  // margin: 0 auto;
+  padding: 0;
+  width: 18px;
+  height: 18px;
+  border: 1px solid #383838;
+  border-radius: 2px;
+  cursor: pointer;
+  position: relative;
+  background: #1a1a1a;
+  transition: background-color 0.15s ease, border-color 0.15s ease;
+
+  &:hover {
+    border-color: #6b7280;
+  }
+
+  &:checked {
+    background-color: #cf0;
+    border-color: #cf0;
+  }
+
+  /* 체크표시 */
+  &::after {
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 6px;
+    width: 3px;
+    height: 6px;
+    border: solid #000;
+    border-width: 0 2px 2px 0;
+    transform: scale(0) rotate(45deg);
+    transition: transform 0.15s ease;
+  }
+
+  &:checked::after {
+    transform: scale(1) rotate(45deg);
+  }
+}
+
 .buy-nft-modal {
   display: flex;
   gap: 24px;
@@ -15,23 +57,76 @@
 
   .buy-nft-modal__checkbox-wrap {
     display: flex;
+    align-items: center;
     gap: 8px;
   }
   .buy-nft-modal__checkbox {
+    @include checkbox();
   }
   .buy-nft-modal__checkbox--message {
     color: #cf0;
     font-family: Inter400;
     font-size: 16px;
   }
+
   .buy-nft-modal__button-wrap {
     display: flex;
     gap: 24px;
   }
   .buy-nft-modal__button {
+    border-radius: 12px;
+    position: relative;
+    top: 0px;
+    width: 100%;
+    height: 40px;
+    font-family: Orbitron600;
+    transition: 0.2s all;
+
+    &:hover {
+      top: 4px;
+      &::after {
+        top: 0px;
+      }
+    }
+
+    &::after {
+      content: '';
+      border: 1px solid;
+      position: absolute;
+      top: 4px;
+      left: 0px;
+      width: calc(100% - 2px);
+      height: calc(100% - 1px);
+      border-radius: 12px;
+      transition: 0.2s all;
+    }
+
     &.cancel-button {
+      background-color: #383838;
+      &::after {
+        border-color: #383838;
+      }
     }
     &.buy-button {
+      color: #1a1a1a;
+      background-color: #cf0;
+      &:disabled {
+        background-color: #000;
+        color: #565656;
+        border: 1px solid #2c3a00;
+        pointer-events: none;
+
+        &::after {
+          top: 5px;
+          width: 100%;
+          border: none;
+          border-bottom: 1px solid #2c3a00;
+        }
+      }
+
+      &::after {
+        border-color: #cf0;
+      }
     }
   }
 }
