--- a/src/components/nft/MintNftDetail.scss
+++ b/src/components/nft/MintNftDetail.scss
@@ -48,6 +48,7 @@
     font-style: normal;
     line-height: normal;
     border-radius: 12px;
+    text-transform: capitalize;
     &::before {
       content: '';
       position: absolute;
