--- a/src/components/nft/MintNftDetail.scss
+++ b/src/components/nft/MintNftDetail.scss
@@ -400,7 +400,7 @@
       }
     } //create-btn--END--
   } //filter-create--END--
-  .nft-item-collection-wrap {
+  .scroll-box {
     max-height: 380px;
     overflow: auto;
   } //nft-item-collection-wrap--END--
