--- a/src/components/modal/ErrorModal.scss
+++ b/src/components/modal/ErrorModal.scss
@@ -20,6 +20,7 @@
     font-family: orbitron600;
     letter-spacing: 0.48px;
     margin-bottom: 24px;
+    word-break: break-all;
   }
 
   .error-modal__button {
