--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -84,6 +84,7 @@
       display: flex;
       justify-content: space-between;
       gap: 16px;
+      min-height: 21px;
     }
     .profile__desc--content {
       color: #aaa;
