--- a/src/styles/Nft.scss
+++ b/src/styles/Nft.scss
@@ -1,103 +1,119 @@
 .nft {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+  .nft__exchange {
+    padding: 50px 140px;
+    background: url('../assets/images/nft/nft-banner.png') no-repeat center center;
+    background-size: cover;
+  }
+  .nft__exchange--title {
+    color: #cf0;
+    font-family: Orbitron700;
+    font-size: 32px;
+    letter-spacing: 0.96px;
+    margin-bottom: 40px;
+  }
+  .nft__exchange--desc {
+    color: #f1f1f1;
+    text-shadow: 0px 4px 0px rgba(0, 0, 0, 0.6);
+    font-family: Orbitron400;
+    font-size: 20px;
+    letter-spacing: 0.6px;
+    margin-bottom: 24px;
+  }
+  .nft__exchange--btns {
     display: flex;
-    flex-direction: column;
-    gap: 24px;
-
-    .nft__exchange {
-        padding: 50px 140px;
-        background: url('../assets/images/nft/nft-banner.png') no-repeat center center;
-        background-size: cover;
+    align-items: center;
+    gap: 16px;
+    justify-content: space-between;
+    width: 100%;
+    .nft__exchange--btns__right {
+      display: flex;
+      align-items: center;
+      gap: 16px;
     }
-    .nft__exchange--title {
-        color: #cf0;
-        font-family: Orbitron700;
-        font-size: 32px;
-        letter-spacing: 0.96px;
-        margin-bottom: 40px;
+  }
+  .nft__exchange--button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: right;
+    width: 100px;
+    height: 34px;
+    background: #cf0;
+    position: relative;
+    top: 0;
+    transition: 0.2s;
+    color: #1a1a1a;
+    font-family: Orbitron600;
+    font-size: 16px;
+    font-style: normal;
+    line-height: normal;
+    border-radius: 12px;
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 4px;
+      width: calc(100% - 2px);
+      transition: 0.2s;
+      border-radius: 12px;
+      height: 33px;
+      border: 1px solid #cf0;
     }
-    .nft__exchange--desc {
-        color: #f1f1f1;
-        text-shadow: 0px 4px 0px rgba(0, 0, 0, 0.6);
-        font-family: Orbitron400;
-        font-size: 20px;
-        letter-spacing: 0.6px;
-        margin-bottom: 24px;
-    }
-    .nft__exchange--btns{
-        display: flex;
-        align-items: center;
-        gap: 16px;
-        justify-content: space-between;
-        width: 100%;
-        .nft__exchange--btns__right{
-            display: flex;
-            align-items: center;
-            gap: 16px;
-        }
-    }
-    .nft__exchange--button{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        float: right;
-        width: 100px;
-        height: 34px;
-        background: #cf0;
-        position: relative;
+    &:hover {
+      top: 4px;
+      &::before {
         top: 0;
-        transition: 0.2s;
-        color:#1A1A1A;
-        font-family: Orbitron600;
-        font-size: 16px;
-        font-style: normal;
-        line-height: normal;
-        border-radius: 12px;
-        &::before{
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 4px;
-            width: calc(100% - 2px);
-            transition: 0.2s;
-            border-radius: 12px;
-            height: 33px;
-            border: 1px solid #cf0;
-        }
-        &:hover{
-            top: 4px;
-            &::before{
-                top: 0;
-            }
-        }
-        &.mint{
-            background: #00ffb3;
-            &::before{
-                border: 1px solid #00ffb3;
-            }
-        }
-        &.my{
-            background: #4EE1FB;
-            &::before{
-                border: 1px solid #4EE1FB;
-            }
-        }
-    }//.nft__exchange--button--END--
-
+      }
+    }
+    &.mint {
+      background: #00ffb3;
+      &::before {
+        border: 1px solid #00ffb3;
+      }
+    }
+    &.my {
+      background: #4ee1fb;
+      &::before {
+        border: 1px solid #4ee1fb;
+      }
+    }
+  } //.nft__exchange--button--END--
 }
 
+.wallet-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
 
-
+.wallet-modal {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 500px;
+  width: 90%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
 
 @media screen and (max-width: 768px) {
-    .nft{
-        .nft__exchange{
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+  .nft {
+    .nft__exchange {
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
+  }
 }
-
-
