경세 fix : 어카운트 세팅 링크 추가 시 정규식 추가 및 링크 모달 정규식 추가

--- a/src/components/LinksModal.scss
+++ b/src/components/LinksModal.scss
@@ -7,5 +7,10 @@
     color: #519bf6;
     font-family: Orbitron400;
     font-size: 12px;
+
+    &.invalid {
+      color: #383838;
+      pointer-events: none;
+    }
   }
 }
