--- a/src/styles/AccountSettings.scss
+++ b/src/styles/AccountSettings.scss
@@ -306,6 +306,7 @@
       font-size: 12px;
       position: absolute;
       top: 100%;
+      white-space: nowrap;
     }
 
     .account-setting__social-item--delete {
