경세 feat : 어카운트 세팅 링크 추가 버튼 아이콘 추가

--- a/src/styles/AccountSettings.scss
+++ b/src/styles/AccountSettings.scss
@@ -325,6 +325,7 @@
     font-weight: 500;
     border-radius: 12px;
     background-color: #222;
+    align-items: center;
   }
 
   .account-setting__submit {
