경세 fix : 백그라운드 이미지 용량 제한 및 url 유효성 검사 로직 추가 및 버튼 비활성화 추가

--- a/src/styles/AccountSettings.scss
+++ b/src/styles/AccountSettings.scss
@@ -357,6 +357,20 @@
       }
     }
 
+    &:disabled {
+      background-color: #000;
+      color: #565656;
+      border: 1px solid #2c3a00;
+      pointer-events: none;
+
+      &::before {
+        top: 5px;
+        width: 100%;
+        border: none;
+        border-bottom: 1px solid #2c3a00;
+      }
+    }
+
     &::before {
       content: '';
       width: calc(100% - 2px);
