경세 fix : 어카운트 세팅 에러 백그라운드 이미지 에러 메시지 위치 볍ㄴ경

--- a/src/styles/AccountSettings.scss
+++ b/src/styles/AccountSettings.scss
@@ -136,6 +136,7 @@
         font-size: 12px;
         font-family: Inter300;
         color: #df1919;
+        white-space: nowrap;
       }
     }
     .account-setting__user-info {
@@ -161,6 +162,7 @@
             font-size: 14px;
             font-style: normal;
             line-height: 100%; /* 14px */
+            white-space: nowrap;
           }
         }
         .user-info__desc {
