--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -36,6 +36,7 @@
       width: 24px;
       height: 24px;
       object-fit: cover;
+      border-radius: 100%;
     }
     .profile__info--name-text {
       font-family: Orbitron400;
