상훈 feat: NftConfirmModal 및 ModalWrap 스타일 개선, BuyNftModal에서 NFT 정보 표시 추가

--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -23,6 +23,9 @@
       text-align: center;
       position: relative;
       border-bottom: 1px solid var(--Color-04, #222);
+      h2 {
+        font-size: 24px;
+      }
     }
     .modal-close {
       position: absolute;
@@ -233,7 +236,7 @@
               font-style: normal;
               line-height: normal;
               &::before {
-                content: "";
+                content: '';
                 display: block;
                 width: 4px;
                 height: 4px;
