--- a/src/styles/NftItemDetail.scss
+++ b/src/styles/NftItemDetail.scss
@@ -351,7 +351,7 @@
         }
         button,
         p {
-          width: 66px;
+          // width: 66px;
           display: flex;
           align-items: center;
           color: #aaa;
@@ -361,7 +361,9 @@
           font-style: normal;
           line-height: 100%; /* 12px */
         }
-        .play {
+        .play,
+        .love,
+        .share {
           display: flex;
           align-items: center;
           color: #aaa;
@@ -370,7 +372,56 @@
           font-size: 12px;
           font-style: normal;
           line-height: 100%;
+          height: 32px;
+          padding: 6px 4px;
+          background-color: #222;
+          border-radius: 6px;
         }
+        .play {
+          img {
+            padding: 5px 0px 5px 5px;
+          }
+        }
+        .share {
+          cursor: pointer;
+        }
+        .nfts {
+          height: 32px;
+          padding: 4px;
+          border-radius: 4px;
+          border: 1px solid #383838;
+          background-color: #222;
+          gap: 4px;
+          cursor: pointer;
+
+          &.New {
+            border-color: #ffffff;
+          }
+          &.Indie {
+            border-color: #b89334;
+          }
+          &.Rising {
+            border-color: #00d5a7;
+          }
+          &.Top {
+            border-color: #df454d;
+          }
+          &.Legend {
+            border-color: #5a9bf6;
+          }
+
+          .nfts-section {
+            width: 1px;
+            height: 100%;
+            background-color: #565656;
+          }
+          .nfts-text {
+            color: #fff;
+            font-family: Orbitron400;
+            font-size: 8px;
+          }
+        }
+
         .nft-item-detail__song-detail__left__info__number {
           display: flex;
           align-items: center;
