--- a/src/components/NftConfirmSuccessModal.scss
+++ b/src/components/NftConfirmSuccessModal.scss
@@ -9,7 +9,6 @@
       color: #f1f1f1;
       font-family: Inter400;
       font-size: 16px;
-      margin-bottom: 16px;
     }
     dd {
       color: #cf0;
@@ -38,6 +37,21 @@
         color: #fff;
         &::after {
           border: 1px solid #383838;
+        }
+      }
+      &.disabled {
+        background-color: #000;
+        color: #565656;
+        border: 1px solid #2c3a00;
+        pointer-events: none;
+        &::after {
+          border: none;
+        }
+        &:hover {
+          top: 0;
+          &::after {
+            top: 0;
+          }
         }
       }
       flex: 1;
