--- a/src/components/unit/PolygonStatus.scss
+++ b/src/components/unit/PolygonStatus.scss
@@ -2,9 +2,7 @@
   display: flex;
   align-items: start;
   flex-direction: column;
-  p {
-    color: #f1f1f1;
-  }
+  margin-bottom: 16px;
   .polygon-status__img-box {
     width: 100%;
     text-align: center;
